# agora

./: .gitignore  .hlint.yaml  Agora-AuthorityToken.html  Agora-Effect-GovernorMutation.html  Agora-Effect-NoOp.html  Agora-Effect-TreasuryWithdrawal.html  Agora-Effect.html  Agora-Governor-Scripts.html  Agora-Governor.html  Agora-MultiSig.html  Agora-Proposal-Scripts.html  Agora-Proposal-Time.html  Agora-Proposal.html  Agora-Record.html  Agora-SafeMoney.html  Agora-ScriptInfo.html  Agora-Stake-Scripts.html  Agora-Stake.html  Agora-Treasury.html  Agora-Utils-Value.html  Agora-Utils.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  MutateGovernorDatum.1.json  MutateGovernorDatum.json  README.md  TreasuryWithdrawal.json  agora.cabal  agora.haddock  agora.txt  bench.csv  bench.json  cabal.project  default.nix  doc-index-46.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  (+25 more)
.github/: format.sh  pull_request_template.md
.github/workflows/: integrate.yaml  learn-github-actions.yml  prepare-nix.yml
agora/: PPrelude.hs
agora-bench/: Bench.hs  Main.hs  Options.hs
agora-purescript-bridge/: AgoraTypes.hs  Bridge.hs  Options.hs
agora-purescript-bridge/src/Agora/: AuthorityToken.purs  Governor.purs  MultiSig.purs  Proposal.purs  Stake.purs  Treasury.purs
agora-purescript-bridge/src/Agora/Effect/: GovernorMutation.purs  TreasuryWithdrawal.purs
agora-sample/Sample/: Governor.hs  Proposal.hs  Sample.hs  Shared.hs  Stake.hs
agora-sample/Sample/Effect/: GovernorMutation.hs  TreasuryWithdrawal.hs
agora-scripts/: API.hs  Cache.hs  Main.hs  Options.hs  Scripts.hs  Types.hs  agora-params.json  agora-scripts.json  sampleGov.json
agora-scripts/Codec/Serialise/: Orphans.hs
agora-scripts/Data/Cache/: Cached.hs
agora-scripts/ScriptExport/: API.hs  Options.hs  Types.hs
agora-spec/Spec/: AuthorityToken.hs  Governor.hs  Proposal.hs  Spec.hs  Specification.hs  Stake.hs  Treasury.hs
agora-spec/Spec/Effect/: *agora*  GovernorMutation.hs  TreasuryWithdrawal.hs  TreasuryWithdrawal.hs~
agora-specs/Property/: Generator.hs  Governor.hs  MultiSig.hs  Utility.hs  Utils.hs
agora-specs/Sample/: Governor.hs  Proposal.hs  Shared.hs  Stake.hs  Treasury.hs
agora-specs/Sample/AuthorityToken/: UnauthorizedMintingExploit.hs
agora-specs/Sample/Effect/: GovernorMutation.hs  TreasuryWithdrawal.hs
agora-specs/Sample/Governor/: Initialize.hs  Mutate.hs
agora-specs/Sample/Proposal/: Advance.hs  Cosign.hs  Create.hs  PrivilegeEscalate.hs  Shared.hs  Unlock.hs  UnlockStake.hs  Vote.hs
agora-specs/Sample/Stake/: Create.hs  Destroy.hs  SetDelegate.hs  UnauthorizedMintingExploit.hs
agora-specs/Spec/: AuthorityToken.hs  Generator.hs  Governor.hs  Proposal.hs  Stake.hs  Treasury.hs  Utils.hs
agora-specs/Spec/Effect/: GovernorMutation.hs  TreasuryWithdrawal.hs
agora-test/: Golden.hs  README.md  README.org  Spec.hs
agora-test/Model/: MultiSig.hs
agora-test/Spec/: AuthorityToken.hs  Governor.hs  Int.hs  Proposal.hs  Stake.hs  Treasury.hs  Util.hs  Utils.hs
agora-test/Spec/Effect/: #TreasuryWithdrawal.hs#  .#TreasuryWithdrawal.hs  GovernorMutation.hs  TreasuryWithdrawal.hs  TreasuryWithdrawalEffect.hs
agora-test/Spec/Model/: MultiSig.hs  Treasury.hs
agora-test/Spec/Sample/: Governor.hs  Proposal.hs  Sample.hs  Shared.hs  Stake.hs  Treasury.hs
agora-test/Spec/Sample/Effect/: TreasuryWithdrawal.hs
agora-test/goldens/: agora-golden.json  agoraDebug-golden.json
agora-testlib/Test/: Specification.hs  Util.hs
agora/Agora/: AuthorityToken.hs  Bootstrap.hs  Credential.hs  Effect.hs  Governor.hs  Linker.hs  MultiSig.hs  Proposal.hs  Record.hs  SafeMoney.hs  ScriptInfo.hs  Scripts.hs  Stake.hs  Treasury.hs  Utils.hs  Voting.hs
agora/Agora/Aeson/: Orphans.hs
agora/Agora/Effect/: GovernorMutation.hs  NoOp.hs  README.md  README.org  TreasuryWithdrawal.hs
agora/Agora/Effects/: GovernorMutation.hs
agora/Agora/GT/: Policy.hs
agora/Agora/Governor/: Scripts.hs
agora/Agora/Plutarch/: Orphans.hs
agora/Agora/Proposal/: Scripts.hs  Time.hs
agora/Agora/SafeMoney/: QQ.hs
agora/Agora/Stake/: Redeemers.hs  Scripts.hs
agora/Agora/Utils/: BSM.hs  BST.hs  Value.hs
agora/html/: Agora-AuthorityToken.html  Agora-Effect.html  Agora-Governor.html  agora.haddock  agora.txt  doc-index.html
agora/html/src/: Agora.AuthorityToken.html  Agora.Effect.html  Agora.SafeMoney.html  Agora.Stake.html  Agora.Utils.Value.html  Agora.Utils.html
bench/: Main.hs
docs/: README.md  governance-concepts.md  using-agora.md
docs/concepts/: README.md  governor.md  treasury.md
docs/diagrams/: GovernanceAuthorityToken.dot  Makefile  ProposalStateMachine.dot  README.md  UsingAgora.dot  gov-overview.dot  staking-pool.dot
docs/from brian bush/: README.md  governance.md  proposals.md
docs/meta/: README.md  status-format.md  style-guide.md
docs/tech-design/: authority-tokens.md  effects.md  governor.md  proposals.md  safety-pool.md  staking-pool.md  treasury.md  vesting.md
scripts/: agora:authorityTokenPolicy.plutus  agora:governorPolicy.plutus  agora:governorValidator.plutus  agora:mutateGovernorValidator.plutus  agora:proposalPolicy.plutus  agora:proposalValidator.plutus  agora:stakePolicy.plutus  agora:stakeValidator.plutus  agora:treasuryValidator.plutus  agora:treasuryWithdrawalValidator.plutus  all.json
src/: Agora.Aeson.Orphans.html  Agora.AuthorityToken.html  Agora.Effect.GovernorMutation.html  Agora.Effect.NoOp.html  Agora.Effect.TreasuryWithdrawal.html  Agora.Effect.html  Agora.Governor.Scripts.html  Agora.Governor.html  Agora.MultiSig.html  Agora.Plutarch.Orphans.html  Agora.Proposal.Scripts.html  Agora.Proposal.Time.html  Agora.Proposal.html  Agora.Record.html  Agora.SafeMoney.html  Agora.ScriptInfo.html  Agora.Stake.Scripts.html  Agora.Stake.html  Agora.Treasury.html  Agora.Utils.Value.html  Agora.Utils.html
src/Agora/: AuthorityToken.hs  MultiSig.hs  SafeMoney.hs  Stake.hs  Treasury.hs  Utils.hs  Voting.hs
src/Agora/SafeMoney/: QQ.hs
src/Agora/Utils/: Value.hs
src/Plutarch/: These.hs
src/Plutarch/Api/V1/: These.hs
src/Plutarch/Extra/: Map.hs
test/: Spec.hs
