cabal-version:      3.0
name:               agora
version:            0.2.0
extra-source-files: CHANGELOG.md
author:             Emily Martins <emi@haskell.fyi>
license:            Apache-2.0

--------------------------------------------------------------------------------
-- Common Stanza Declarations

-- Language options, warnings, some options for plutus

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    NoFieldSelectors
    OverloadedRecordDot

  default-language:   Haskell2010

common deps
  build-depends:
    , aeson
    , ansi-terminal
    , base                   >=4.14 && <5
    , base-compat
    , base16
    , bytestring
    , cardano-binary
    , cardano-prelude
    , composition-prelude
    , containers
    , data-default
    , data-default-class
    , filepath
    , generics-sop
    , liqwid-plutarch-extra
    , liqwid-script-export
    , optics
    , plutarch
    , plutarch-extra
    , plutarch-numeric
    , plutarch-safe-money
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , ply-plutarch
    , pprelude
    , prettyprinter
    , recursion-schemes
    , serialise
    , tagged
    , template-haskell
    , text

common plutarch-prelude
  mixins:
    base hiding (Prelude),
    pprelude (PPrelude as Prelude)

common test-deps
  build-depends:
    , agora
    , cryptonite
    , data-default-class
    , memory
    , mtl
    , plutarch-context-builder
    , plutarch-quickcheck
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , universe
    , universe-base

common exe-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O0

library
  import:          lang, deps, plutarch-prelude
  exposed-modules:
    Agora.Aeson.Orphans
    Agora.AuthorityToken
    Agora.Bootstrap
    Agora.Credential
    Agora.Effect
    Agora.Effect.GovernorMutation
    Agora.Effect.NoOp
    Agora.Effect.TreasuryWithdrawal
    Agora.Governor
    Agora.Governor.Scripts
    Agora.Linker
    Agora.Plutarch.Orphans
    Agora.Proposal
    Agora.Proposal.Scripts
    Agora.Proposal.Time
    Agora.SafeMoney
    Agora.Stake
    Agora.Stake.Redeemers
    Agora.Stake.Scripts
    Agora.Treasury
    Agora.Utils

  other-modules:
  hs-source-dirs:  agora

library pprelude
  default-language: Haskell2010
  exposed-modules:  PPrelude
  hs-source-dirs:   agora
  build-depends:
    , base
    , plutarch

library agora-testlib
  import:          lang, deps, plutarch-prelude, test-deps
  exposed-modules:
    Test.Specification
    Test.Util

  hs-source-dirs:  agora-testlib

library agora-specs
  import:          lang, deps, plutarch-prelude, test-deps
  exposed-modules:
    Property.Generator
    Property.Governor
    Sample.Effect.GovernorMutation
    Sample.Effect.TreasuryWithdrawal
    Sample.Governor.Initialize
    Sample.Governor.Mutate
    Sample.Proposal.Advance
    Sample.Proposal.Cosign
    Sample.Proposal.Create
    Sample.Proposal.Shared
    Sample.Proposal.Unlock
    Sample.Proposal.Vote
    Sample.Shared
    Sample.Stake
    Sample.Stake.SetDelegate
    Sample.Treasury
    Spec.AuthorityToken
    Spec.Effect.GovernorMutation
    Spec.Effect.TreasuryWithdrawal
    Spec.Governor
    Spec.Proposal
    Spec.Stake
    Spec.Treasury
    Spec.Utils

  hs-source-dirs:  agora-specs
  build-depends:   agora-testlib

test-suite agora-test
  import:         lang, deps, plutarch-prelude, test-deps
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: agora-test
  build-depends:
    , agora-specs
    , agora-testlib

benchmark agora-bench
  import:         lang, deps, plutarch-prelude
  hs-source-dirs: agora-bench
  main-is:        Main.hs
  other-modules:
    Bench
    Options

  type:           exitcode-stdio-1.0
  build-depends:
    , agora
    , agora-specs
    , agora-testlib
    , cassava
    , mtl
    , optparse-applicative

executable agora-scripts
  import:         lang, deps, exe-opts
  main-is:        Main.hs
  hs-source-dirs: agora-scripts
  other-modules:
  build-depends:
    , aeson-pretty
    , agora
    , gitrev

  mixins:         base

executable agora-purescript-bridge
  import:         lang, deps, plutarch-prelude, exe-opts
  main-is:        Bridge.hs
  hs-source-dirs: agora-purescript-bridge
  other-modules:
    AgoraTypes
    Options

  build-depends:
    , agora
    , optparse-applicative
    , path
    , purescript-bridge
